@@ -1,5 +1,0 @@
-List of things riba needs to clear out before next official in order
-of importance:
-(Keep Getty happy)
-
-- Clarify/warn on the distinct over multiple columns get_column()
