@@ -22,6 +22,8 @@ Revision history for DBIx::Class
           an exception object with broken string overloading
         - Clarify ambiguous behavior of distinct when used with ResultSetColumn
           i.e. $rs->search({}, { distinct => 1 })->get_column (...)
+        - Explicitly deprecate combination of distinct and selecting a
+          non-column via $rs->get_column()
         - Setting quote_names propagates to SQL::Translator when producing
           SQLite DDL (it is one of the few producers *NOT* quoting by default)
         - Fix incorrect binding of large integers on old versions of
